--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-romance-of-Isabel-Lady-Burton-b-The-story-of-her-life-Volume-I_71804
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 71804-h/images/cover.jpg
 creator:
   authors:
   - agent_name: Burton, Isabel, Lady
@@ -19,6 +22,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/2026
     wikipedia: https://en.wikipedia.org/wiki/William_Henry_Wilkins
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/71804#The-romance-of-Isabel-Lady-Burton-b-The-story-of-her-life-Volume-I
 gutenberg_issued: '2023-10-04'
 identifiers:
   gutenberg: '71804'
